<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">牵挂</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="qiangua">开始牵挂</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_login">登录</string>
    <string name="login_pwd">密码</string>
    <string name="login_phone">手机号</string>
    <string name="login_btn">登录</string>
    <string name="login_rem">记住密码</string>
    <string name="login_findpwd">找回密码</string>
    <string name="register_inLogin">注册账号</string>
    <string name="title_activity_register">注册</string>
    <string name="register_next">></string>
    <string name="register_one">1 输入手机号码</string>
    <string name="register_two">2 输入验证码</string>
    <string name="register_three">3 设置密码</string>
    <string name="register_phone_hint">请输入您的手机号</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_enter_code_hint">请输入手机获取的短信验证码</string>
    <string name="register_next_step">下一步</string>
    <string name="register_submit_code">提交验证码</string>
    <string name="title_activity_register3">Register3Activity</string>
    <string name="register_enter_pwd_hint">6到32位字母数字符号组合</string>
    <string name="register_enter_pwd_again_hint">请再次输入设置的密码</string>
    <string name="register_enter_name_hint">请输入您的用户名</string>
    <string name="title_activity_funcion">FuncionActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section4">section 4</string>
    <string name="menu_home">首页</string>
    <string name="menu_positon">定位</string>
    <string name="menu_share">分享</string>
    <string name="menu_alarm">提醒</string>
    <string name="menu_setting">更多</string>
    <string name="app_cn">牵挂</string>
    <string name="title_activity_searching">添加绑定</string>
    <string name="binding_input_hint">请输入对方手机号</string>
    <string name="searching">搜索</string>
    <string name="requset_binding">绑定</string>
    <string name="title_activity_bind_result">系统消息</string>
    <string name="title_activity_show_map">地图</string>
    <string name="title_activity_choose">ChooseActivity</string>
    <string name="input_agenda_hint">提醒老人</string>
    <string name="agenda_label">设置日程</string>
    <string name="change_pwd">修改密码</string>
    <string name="fall_record">摔倒记录</string>
    <string name="feedback">意见反馈</string>
    <string name="check_new_version">检测更新</string>
    <string name="about_us">关于牵挂</string>
    <string name="account_issue">账号</string>
    <string name="emergency">紧急号码</string>
    <string name="emergency_none">紧急号码信息，快去添加吧</string>
    <string name="push_emergency">同步</string>
    <string name="share_img_des">分享的图片</string>
    <string name="title_activity_about">关于牵挂</string>
    <string name="version_tag">V1.0.0</string>
    <string name="slogo">生活因牵挂而精彩</string>
    <string name="copy_right">CopyRight ⓒ   2014 Heart Wings.All Rights Reserved</string>
    <string name="title_activity_feed_back">意见反馈</string>
    <string name="thanks">感谢您使用“牵挂”客户端</string>
    <string name="invite_other">邀请他人</string>
    <string name="title_activity_change_pwd">修改密码</string>
    <string name="change_step_one">1 输入旧密码</string>
    <string name="change_step_two">2 输入验证码</string>
    <string name="change_step_three">3 输入新密码</string>
    <string name="input_oldpwd_hint">请输入旧密码</string>
    <string name="confirm_submit">确定</string>
    <string name="title_activity_news_content">资讯</string>
    <string name="title_activity_second_set_agenda">日程提醒</string>
    <string name="eat_medicine">吃药提醒</string>
    <string name="birthday">生日提醒</string>
    <string name="memory">纪念日提醒</string>
    <string name="drink">喝水提醒</string>
    <string name="other">其他提醒</string>
    <string name="sava_agenda">保存</string>
    <string name="title_activity_set_medicine">提醒</string>
    <string name="the_th_txt">第一次</string>
    <string name="title_activity_birthday">提醒</string>

    <string  name="default_birth">10月15日</string>
</resources>
